prueba segundo añadido

--- a/hello2.html
+++ b/hello2.html
@@ -5,6 +5,6 @@
         <title>pruega github</title>
     </head>
     <body>
-        Hola mundo github
+        Hola mundo github, añado mas cosas a esta frase
     </body>
 </html>
